adding more company descriptions

--- a/neuroengineering_companies.html
+++ b/neuroengineering_companies.html
@@ -338,6 +338,20 @@
                                         <a href="https://paradromics.com/" target="_blank"> <div class="square img_5-2"> </div> </a>
                                         <a href="https://rippleneuro.com/ripple-products/" target="_blank"> <div class="square img_5-3"> </div> </a>
 
+                                        <div>
+                                            <ul>
+                                                <li><a href="http://corteraneuro.com/products/neuroscience" target="_blank"><b>Cortera Neurotechnologies:</b></a> Implantable neurointerfaces for recording and stimulation in the human centeral nervous system.</li>
+                                                <li><a href="https://www.galvani.bio/" target="_blank"><b>Galvani Bioelectronics:</b></a> Creates tiny implantables that read and modify electrical signals passing along nerves. </li>
+                                                <li><a href="https://iota.bio/" target="_blank"><b>Iota Biosciences:</b></a> Implantable ultrasonic motes that can record and stimulate nerves.</li>
+                                                <li><a href="https://www.medtronic.com/us-en/healthcare-professionals/products/neurological.html" target="_blank"><b>Medtronic:</b></a> Develops many implantable technologies i.e. spinal cord stimulation, deep brain stimualtion etc.</li>
+                                                <li><a href="https://www.neuralink.com/" target="_blank"><b>Neuralink:</b></a> Brain machine interface company.</li>
+                                                <li><a href="https://www.neuropace.com/the-rns-system/" target="_blank"><b>Neuropace:</b></a> Brain responsive neurostimulation system for epilepsy that responds in real time.</li>
+                                                <li><a href="https://www.nevro.com/English/About-Us/Who-We-Are/default.aspx" target="_blank"><b>Nevro:</b></a> Neuromodulation platform for the treatment of chronic pain.</li>
+                                                <li><a href="https://paradromics.com/" target="_blank"><b>Paradromics:</b></a> Brain computer interface company.</li>
+                                                <li><a href="https://rippleneuro.com/ripple-products/" target="_blank"><b>Ripple Neuro:</b></a> Develops various neural recording systems.</li>
+                                            </ul>
+                                        </div>
+
                                         <div style='text-align: center;'>
                                             <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
                                         </div> 
