--- a/neuroengineering_companies.html
+++ b/neuroengineering_companies.html
@@ -337,7 +337,9 @@
                                         <a href="https://www.nevro.com/English/About-Us/Who-We-Are/default.aspx" target="_blank"> <div class="square img_5-1"> </div> </a>
                                         <a href="https://paradromics.com/" target="_blank"> <div class="square img_5-2"> </div> </a>
                                         <a href="https://rippleneuro.com/ripple-products/" target="_blank"> <div class="square img_5-3"> </div> </a>
-
+                                        <div style='text-align: center;'>
+                                            <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
+                                        </div> 
                                         <div>
                                             <ul>
                                                 <li><a href="http://corteraneuro.com/products/neuroscience" target="_blank"><b>Cortera Neurotechnologies:</b></a> Implantable neurointerfaces for recording and stimulation in the human centeral nervous system.</li>
