--- a/neuroScienceTag.html
+++ b/neuroScienceTag.html
@@ -139,6 +139,31 @@
                 <!-- <div class="col-sm-6 text-center"> -->
                             <nav>
 <!--                                 <ul> -->
+                                    <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
+                                        <h3 style="line-height: 1.6;">
+                                            <a href="neuroengineering_companies.html" style="color:#505050" align="left">Neuroengineering Companies</a> <small style="color:#000">June 11, 2019</small>
+                                             <br>
+                                                <button type="button" class="btn btn-info" onclick="window.location.href='AITag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
+                                                <button type="button" class="btn btn-info" onclick="window.location.href='neuroScienceTag.html'" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff; btn:hover"><b>Neuroscience</b></button>
+                                                <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
+                                                <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
+                                                       
+                                        </h3>
+                                                                
+                                        <figure class="img-set">
+                                            <a href="neuroengineering_companies.html">
+                                                <img class="img-border img-left" src="img/companies.png" alt="" style="width:25%; height:50%; border-radius:10px;">
+                                            </a>
+                                        </figure>
+                                                        <p><font face="Garamond" size="5px" color="505050">Over the past few months people have reached out to me wanting to know which companies do the neuroengineering work that we have been discussing...
+                                                        <br><br>
+                                                        <b><u>Keywords:</u></b> Neuroengineering, Neural Engineering, Machine Learning, Artificial Neural Networks, Neuroscience, Neurotechnology, AI, Deep Learning
+                                                        </font>
+
+                                                        </p>
+
+                                    </div>
+                                    <hr>
 
                                     <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
                                         <h3 style="line-height: 1.6;">
