adding neurable to the company distribution

--- a/neuroengineering_companies.html
+++ b/neuroengineering_companies.html
@@ -189,6 +189,13 @@
     background-color: white;
     border-radius: 15%
     }
+
+    .img_11-1{
+    background-image:url('img/neurable.png');
+    background-color: white;
+    border-radius: 15%
+    }
+
     </style>
 
 </head>
@@ -310,8 +317,11 @@
                                         <a href="https://www.ctrl-labs.com/ctrl-kit/" target="_blank"> <div class="square img_1-2"></div></a>
                                         <a href="https://kernel.co/" target="_blank"> <div class="square img_1-3"></div></a>
                                         <a href="https://choosemuse.com/how-it-works/" target="_blank"> <div class="square img_2-1"></div></a>
+                                        <a href="http://neurable.com/technology" target="_blank"> <div class="square img_11-1"></div></a>
                                         <a href="http://www.neurosigma.com/research.html" target="_blank"> <div class="square img_2-2"></div></a>
                                         <a href="https://www.openwater.cc/" target="_blank"> <div class="square img_2-3"></div></a>
+                                        <div class="square"></div>
+                                        <div class="square"></div>
                                         <div style='text-align: center;'>
                                             <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
                                         </div> 
@@ -321,6 +331,7 @@
                                                 <li><a href="https://www.ctrl-labs.com/ctrl-kit/" target="_blank"><b>CTRL-Labs:</b></a> Wearable electromyography (EMG) technology to decode neural signals for hand gestures.</li>
                                                 <li><a href="https://kernel.co/" target="_blank"><b>Kernel:</b></a> A non-invasive brain machine interface company.</li>
                                                 <li><a href="https://choosemuse.com/how-it-works/" target="_blank"><b>Muse:</b></a> Wearable electroencephalogram (EEG) headset technology.</li>
+                                                <li><a href="http://neurable.com/technology" target="_blank"><b>Neurable:</b></a> Dry electroencephalogram (EEG) brain machine interface technology geared towards AR/VR applications.</li>
                                                 <li><a href="http://www.neurosigma.com/research.html" target="_blank"><b>Neurosigma:</b></a> External and subcutaneous trigeminal nerve stimulation.</li>
                                                 <li><a href="https://www.openwater.cc/" target="_blank"><b>Openwater:</b></a> Skull-penetrating infrared light technology to measure blood flow.</li>
                                             </ul>
