fixing functional neural data title typo

--- a/functional_neural_systems_data.html
+++ b/functional_neural_systems_data.html
@@ -116,7 +116,7 @@
                 <div class="col-lg-12">
                     <hr>
                         <h2 class="intro-text text-center">
-                            <font size="5px" class="text-left">How Do You Collect Sytems Level Functional Neural Data?</font>
+                            <font size="5px" class="text-left">How Do You Collect Systems Level Functional Neural Data?</font>
                             <br><br>
                             <font size="4px">November 12, 2018</font>
                             <h3 class="text-center">
