adding more companies to the company list

--- a/neuroengineering_companies.html
+++ b/neuroengineering_companies.html
@@ -196,6 +196,24 @@
     border-radius: 15%
     }
 
+    .img_12-1{
+    background-image:url('img/dreem_logo.png');
+    background-color: white;
+    border-radius: 15%
+    }
+
+    .img_13-1{
+    background-image:url('img/system1-logo.png');
+    background-color: white;
+    border-radius: 15%
+    }
+    
+    .img_14-1{
+    background-image:url('img/humm.png');
+    background-color: white;
+    border-radius: 15%
+    }
+
     </style>
 
 </head>
@@ -315,13 +333,13 @@
                                         Neuromodulators / Neurorecorders / Brain-Machine-Interfaces</h3>
                                         <a href="https://calahealth.com/" target="_blank"><div class="square img_1-1 hover"></div></a>
                                         <a href="https://www.ctrl-labs.com/ctrl-kit/" target="_blank"> <div class="square img_1-2"></div></a>
+                                        <a href="https://dreem.com/en/journey" target="_blank"> <div class="square img_12-1"></div></a>
+                                        <a href="https://thinkhumm.com/" target="_blank"> <div class="square img_14-1"></div></a>
                                         <a href="https://kernel.co/" target="_blank"> <div class="square img_1-3"></div></a>
                                         <a href="https://choosemuse.com/how-it-works/" target="_blank"> <div class="square img_2-1"></div></a>
                                         <a href="http://neurable.com/technology" target="_blank"> <div class="square img_11-1"></div></a>
                                         <a href="http://www.neurosigma.com/research.html" target="_blank"> <div class="square img_2-2"></div></a>
                                         <a href="https://www.openwater.cc/" target="_blank"> <div class="square img_2-3"></div></a>
-                                        <div class="square"></div>
-                                        <div class="square"></div>
                                         <div style='text-align: center;'>
                                             <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
                                         </div> 
@@ -329,6 +347,8 @@
                                             <ul>
                                                 <li><a href="https://calahealth.com/" target="_blank"><b>Cala Health:</b></a> Wearable neuromodulator targeting the peripheral nervous system to alleviate essential tremor.</li>
                                                 <li><a href="https://www.ctrl-labs.com/ctrl-kit/" target="_blank"><b>CTRL-Labs:</b></a> Wearable electromyography (EMG) technology to decode neural signals for hand gestures.</li>
+                                                <li><a href="https://dreem.com/en/journey" target="_blank"><b>Dreem:</b></a> A wearable electroencephalogram (EEG) headband for monitoring sleep activity.</li>
+                                                <li><a href="https://thinkhumm.com/" target="_blank"><b>Humm:</b></a> A wearable patch that stimulates the brain using transcranial alternating current stimulation (tACS).</li>
                                                 <li><a href="https://kernel.co/" target="_blank"><b>Kernel:</b></a> A non-invasive brain machine interface company.</li>
                                                 <li><a href="https://choosemuse.com/how-it-works/" target="_blank"><b>Muse:</b></a> Wearable electroencephalogram (EEG) headset technology.</li>
                                                 <li><a href="http://neurable.com/technology" target="_blank"><b>Neurable:</b></a> Dry electroencephalogram (EEG) brain machine interface technology geared towards AR/VR applications.</li>
@@ -380,7 +400,7 @@
                                         Controlling Neurons for Neural Circuit Investigation</h3>
                                         <a href="http://www.circuittx.com/index.html" target="_blank"> <div class="square img_6-1"> </div> </a>
                                         <a href="https://www.codabiotherapeutics.com/" target="_blank"> <div class="square img_6-2"> </div> </a>
-                                        <div class="square"></div>
+                                        <a href="https://system1.bio/press/"" target="_blank"> <div class="square img_13-1"> </div> </a>
                                         <div style='text-align: center;'>
                                             <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
                                         </div> 
@@ -388,6 +408,7 @@
                                             <ul>
                                                 <li><a href="http://www.circuittx.com/index.html" target="_blank"><b>Circuit Therapeutics:</b></a> Optogenetics for precision medicine.</li>
                                                 <li><a href="https://www.codabiotherapeutics.com/" target="_blank"><b>Coda Biotherapeutics:</b></a> Chemogenetics to treat disease. </li>
+                                                <li><a href="https://system1.bio/press/" target="_blank"><b>System1 Biosciences:</b></a> A neurotherapeutics company that employs phenotypic screening to discover novel drugs for neurological and psychiatric disorders. </li> 
                                             </ul>
                                         </div>
 
