updating companies list

--- a/neuroengineering_companies.html
+++ b/neuroengineering_companies.html
@@ -244,6 +244,36 @@
     border-radius: 15%
     }
 
+    .img_16-1{
+    background-image:url('img/Neuronoff.jpg');
+    background-color: white;
+    border-radius: 15%
+    }
+
+    .img_16-2{
+    background-image:url('img/neuspera.png');
+    background-color: white;
+    border-radius: 15%
+    }
+
+    .img_16-3{
+    background-image:url('img/blackrock.png');
+    background-color: white;
+    border-radius: 15%
+    }
+
+    .img_16-4{
+    background-image:url('img/mindaffect.jpg');
+    background-color: #F69457;
+    border-radius: 15%
+    }
+
+    .img_16-5{
+    background-image:url('img/neurosity.png');
+    background-color: white;
+    border-radius: 15%
+    }
+
     </style>
 
 </head>
@@ -367,12 +397,12 @@
                                         <a href="https://www.theverge.com/2019/9/23/20881032/facebook-ctrl-labs-acquisition-neural-interface-armband-ar-vr-deal" target="_blank"> <div class="square img_15-1"></div></a>
                                         <a href="https://thinkhumm.com/" target="_blank"> <div class="square img_14-1"></div></a>
                                         <a href="https://kernel.co/" target="_blank"> <div class="square img_1-3"></div></a>
+                                        <a href="https://www.mindaffect.nl" target="_blank"> <div class="square img_16-4"></div></a>
                                         <a href="https://choosemuse.com/how-it-works/" target="_blank"> <div class="square img_2-1"></div></a>
                                         <a href="http://neurable.com/technology" target="_blank"> <div class="square img_11-1"></div></a>
                                         <a href="http://www.neurosigma.com/research.html" target="_blank"> <div class="square img_2-2"></div></a>
+                                        <a href="https://neurosity.co" target="_blank"> <div class="square img_16-5"></div></a>
                                         <a href="https://www.openwater.cc/" target="_blank"> <div class="square img_2-3"></div></a>
-                                        <a href="" target="_blank"> <div class="square"></div></a>
-                                        <a href="" target="_blank"> <div class="square"></div></a>
                                         <div style='text-align: center;'>
                                             <div class = 'column' style='width:30%; height:25%; padding:1.9%; border-radius: 25%; display: inline-block;'> </div>
                                         </div> 
@@ -384,9 +414,11 @@
                                                 <li><a href="https://www.theverge.com/2019/9/23/20881032/facebook-ctrl-labs-acquisition-neural-interface-armband-ar-vr-deal" target="_blank"><b>Facebook:</b></a> Acquired CRTL-Labs. We will see what comes of their electromyography (EMG) wristband technology.</li>
                                                 <li><a href="https://thinkhumm.com/" target="_blank"><b>Humm:</b></a> A wearable patch that stimulates the brain using transcranial alternating current stimulation (tACS).</li>
                                                 <li><a href="https://kernel.co/" target="_blank"><b>Kernel:</b></a> A non-invasive brain machine interface company.</li>
+                                                <li><a href="https://www.mindaffect.nl" target="_blank"><b>Mind Affect:</b></a> A wearable brain machine interface company allowing you to utilize your own stimulus.</li>
                                                 <li><a href="https://choosemuse.com/how-it-works/" target="_blank"><b>Muse:</b></a> Wearable electroencephalogram (EEG) headset technology.</li>
                                                 <li><a href="http://neurable.com/technology" target="_blank"><b>Neurable:</b></a> Dry electroencephalogram (EEG) brain machine interface technology geared towards AR/VR applications.</li>
                                                 <li><a href="http://www.neurosigma.com/research.html" target="_blank"><b>Neurosigma:</b></a> External and subcutaneous trigeminal nerve stimulation.</li>
+                                                <li><a href="http://www.neurosity.co" target="_blank"><b>Neurosity:</b></a> A wearable brain computer interface called "notion" that connects you to personalized applications.</li>
                                                 <li><a href="https://www.openwater.cc/" target="_blank"><b>Openwater:</b></a> Skull-penetrating infrared light technology to measure blood flow.</li>
                                             </ul>
                                         </div>
@@ -399,13 +431,16 @@
                                         <h3>Invasive:
                                         <br>
                                         Neuromodulators / Neurorecorders / Brain-Machine-Interfaces</h3>
+                                        <a href="https://www.blackrockmicro.com" target="_blank"> <div class="square img_16-3 hover"> </div> </a>
                                         <a href="http://corteraneuro.com/products/neuroscience" target="_blank"> <div class="square img_3-1 hover"> </div> </a>
                                         <a href="https://www.galvani.bio/" target="_blank"> <div class="square img_3-2"> </div> </a>
                                         <a href="https://iota.bio/" target="_blank"> <div class="square img_3-3"> </div> </a>
                                         <a href="https://www.medtronic.com/us-en/healthcare-professionals/products/neurological.html" target="_blank"> <div class="square img_4-1"> </div> </a>
                                         <a href="https://www.neuralink.com/" target="_blank"> <div class="square img_4-2"> </div> </a>
                                         <a href="https://neuronexus.com" target="_blank"> <div class="square img_15-3"> </div> </a>
+										<a href="http://neuronoff.com" target="_blank"> <div class="square img_16-1"> </div> </a>
                                         <a href="https://www.neuropace.com/the-rns-system/" target="_blank"> <div class="square img_4-3"> </div> </a>
+                                        <a href="http://neuspera.com" target="_blank"> <div class="square img_16-2"> </div> </a>
                                         <a href="https://www.nevro.com/English/About-Us/Who-We-Are/default.aspx" target="_blank"> <div class="square img_5-1"> </div> </a>
                                         <a href="https://niatherapeutics.com" target="_blank"> <div class="square img_15-2"> </div> </a>
                                         <a href="https://www.novelaneuro.com" target="_blank"> <div class="square img_15-5"> </div> </a>
@@ -416,18 +451,22 @@
                                         </div> 
                                         <div>
                                             <ul>
+                                            	<li><a href="https://www.blackrockmicro.com" target="_blank"><b>Blackrock Microsystems:</b></a> Supports many facets of neural recording and stimulation in the human central nervous system with Utah arrays. </li>
                                                 <li><a href="http://corteraneuro.com/products/neuroscience" target="_blank"><b>Cortera Neurotechnologies:</b></a> Implantable neurointerfaces for recording and stimulation in the human centeral nervous system. Acquired by Nia Therapeutics in July 2019. </li>
                                                 <li><a href="https://www.galvani.bio/" target="_blank"><b>Galvani Bioelectronics:</b></a> Creates tiny implantables that read and modify electrical signals passing along nerves. </li>
                                                 <li><a href="https://iota.bio/" target="_blank"><b>Iota Biosciences:</b></a> Implantable ultrasonic motes that can record and stimulate nerves.</li>
                                                 <li><a href="https://www.medtronic.com/us-en/healthcare-professionals/products/neurological.html" target="_blank"><b>Medtronic:</b></a> Develops many implantable technologies i.e. spinal cord stimulation, deep brain stimualtion etc.</li>
                                                 <li><a href="https://www.neuralink.com/" target="_blank"><b>Neuralink:</b></a> Brain machine interface company.</li>
                                                 <li><a href="https://neuronexus.com" target="_blank"><b>Neuronexus:</b></a> Neural probes, systems, and custom neural interface solutions.</li>
+                                                <li><a href="http://neuronoff.com" target="_blank"><b>Neuronoff:</b></a> Neuromodulation with the injectrode in the dorsal root ganglion to alleviate pain and reduce opioid dependence.</li>
                                                 <li><a href="https://www.neuropace.com/the-rns-system/" target="_blank"><b>Neuropace:</b></a> Brain responsive neurostimulation system for epilepsy that responds in real time.</li>
+                                                <li><a href="http://neuspera.com" target="_blank"><b>Neuspera:</b></a> Implantable sacral neuromodulation to relieve urge urinary incontinence.</li>
                                                 <li><a href="https://www.nevro.com/English/About-Us/Who-We-Are/default.aspx" target="_blank"><b>Nevro:</b></a> Neuromodulation platform for the treatment of chronic pain.</li>
                                                 <li><a href="https://niatherapeutics.com" target="_blank"><b>Nia Therapeutics:</b></a> An implantable brain stimulation technology to restore memory function. Acquired Cortera Neurotechnologies in July 2019.</li>
                                                 <li><a href="https://www.novelaneuro.com" target="_blank"><b>Novela Neurotech:</b></a> Smart probe technology for neurostimulation treatment.</li>
                                                 <li><a href="https://paradromics.com/" target="_blank"><b>Paradromics:</b></a> Brain computer interface company.</li>
                                                 <li><a href="https://rippleneuro.com/ripple-products/" target="_blank"><b>Ripple Neuro:</b></a> Develops various neural recording systems.</li>
+
                                             </ul>
                                         </div>
 
