--- a/blog.html
+++ b/blog.html
@@ -115,8 +115,33 @@
                     <hr>
                 </div>
 
-
                 <br><br><br><br><br>
+                <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
+                    <h3 style="line-height: 1.6;">
+                        <a href="neurips_2020.html" style="color:#505050" align="left">NeurIPS 2020 Review: Biology Edition</a> <small style="color:#000">December 14, 2020</small>
+                         <br>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='AITag.html'" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b>AI</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='neuroScienceTag.html'" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff; btn:hover"><b>Neuroscience</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='neuroTag.html'" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b>Neuroengineering</b></button>
+                            <button type="button" class="btn btn-info" onclick="window.location.href='techTag.html'" style="font-size:18px; font:bold; background-color:#FFB600; border-color:#FFB600; btn:hover"><b>Tech</b></button>
+                                   
+                    </h3>
+                                            
+                    <figure class="img-set">
+                        <a href="neurips_2020.html">
+                            <img class="img-border img-left" src="img/neurips_2020.jpg" alt="" style="width:25%; height:50%; border-radius:10px;">
+                        </a>
+                    </figure>
+                                    <p><font face="Garamond" size="5px" color="505050">Last week I had an amazing time at NeurIPS 2020! Despite the need to be physically distanced, the flow of ideas though zoom, gather, and rocket chat...
+                                    <br><br>
+                                    <b><u>Keywords:</u></b> Machine Learning, Artificial Intelligence, Biology, Neural Networks, Deep Learning, Neuroscience, Covid19, Healthcare, NeurIPS 
+                                    </font>
+
+                                    </p>
+
+                </div>
+                <hr>
+
                 <div class="col-lg-20" style=" margin-left:5%; margin-right:2%;">
                     <h3 style="line-height: 1.6;">
                         <a href="neuroengineering_companies.html" style="color:#505050" align="left">Neuroengineering Companies</a> <small style="color:#000">June 11, 2019</small>
