hopefully fully live

--- a/neurips_2020.html
+++ b/neurips_2020.html
@@ -128,7 +128,7 @@
 
 
                                         <br><br>
-                                        &emsp; If you are logged into your NeurIPS account you can click the links below and be taken straight to the recordings! If you aren't logged or don't have an account you'll get an "Access Denied" page. For those of you that make it to the end of this post, I have a surprise for you! It's cheating if you just scroll through though!
+                                        &emsp; If you are logged into your NeurIPS account you can click the links below and be taken straight to the recordings! If you aren't logged or don't have an account you'll get either a "Login" page or an "Access Denied" page. For those of you that make it to the end of this post, I have a surprise for you! It's cheating if you just scroll through though!
 
                                         <br><br>
                                         &emsp; During the Cognitive Neuroscience talk at <a href="https://neurips.cc/virtual/2020/protected/tutorial_f1073dcfacb60ad7d23604071d476558.html" target="_blank">Where Neuroscience Meets AI, and What's in Store for the Future</a>, Kevin Miller discussed some common cognitive neuroscience themes and how they relate to machine learning. Specifically, he dove into the ideas of innateness, modularity, methods for studying cognition, vision in the dorsal and ventral streams, episodic memory, planning, cognitive neuroscience in rodents, and coputational cognitive neuroscience. It was a fully loaded talk!
