twitter card fix

--- a/neurips_2020.html
+++ b/neurips_2020.html
@@ -17,8 +17,8 @@
     <meta name="twitter:site" content="@SaberaTalukder">
     <meta name="twitter:creator" content="@SaberaTalukder">
     <meta name="twitter:title" content="NeurIPS 2020 Review: Biology Edition">
-    <meta name="twitter:description" content="XYZ...">
-    <meta name="twitter:image" content="https://saberatalukder.com/img/companies.png">
+    <meta name="twitter:description" content="Last week I had an amazing time at NeurIPS 2020! Despite the need to be physically distanced, the flow of ideas though zoom, gather, and rocket chat...">
+    <meta name="twitter:image" content="https://saberatalukder.com/img/neurips_2020.jpg">
 
 
     <meta charset="utf-8">
