--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="box">
                 <div class="col-lg-12 text-center">
 
-                    <h1 class="brand-name" style="padding-top:15px; position: relative;">Welcome!</h1>
+                    <h1 class="text-center" style="padding-top:15px; position: relative;">Welcome!</h1>
                     <br>
                     <br>              
                 </div>
